tests/baselines/reference/genericMergedDeclarationUsingTypeParameter2.errors.txt
==== tests/cases/compiler/genericMergedDeclarationUsingTypeParameter2.ts (2 errors) ====
    class foo<T> { constructor(x: T) { } }
    module foo {
        export var x: T;
                      ~
!!! genericMergedDeclarationUsingTypeParameter2.ts(3,19): error TS2095: Cannot find name 'T'.
        var y = <T>1;
                 ~
!!! genericMergedDeclarationUsingTypeParameter2.ts(4,14): error TS2095: Cannot find name 'T'.
    }
    